# ml

./: .gitignore  CMakeLists.txt  README.md  high-level-design.md  low-level-design.md
docs/data_preprocessing/: README.md
docs/deep/cnn/: README.md
docs/deep/lstm/: README.md
docs/deep/mlp/: README.md
docs/deep/rnn/: README.md
docs/linear/knn/: README.md
docs/linear/linear_regression/: README.md
docs/linear/logistic_regression/: README.md
docs/modern/self_attention/: README.md
docs/modern/transformer/: README.md
docs/optimization/gradient_boosting/: README.md
examples/: basic_usage.cpp  data_pipeline.cpp
include/: MetricsLogger.hpp
include/ml/core/: Matrix.hpp  (+2 more)
scripts/: fetch_datasets.py
src/data/: CSVReader.cpp  DataFrame.cpp  Split.cpp  Transformers.cpp
src/deep/: CNN.cpp  MLP.cpp  RNN.cpp
src/linear/: KNN.cpp  LinearRegression.cpp  LogisticRegression.cpp
src/modern/: SelfAttention.cpp  Transformer.cpp
src/optimization/: GradientBoosting.cpp  SVM.cpp
src/probabilistic/: DecisionTree.cpp  NaiveBayes.cpp  RandomForest.cpp
src/unsupervised/: KMeans.cpp  PCA.cpp
tests/: TestUtils.hpp  test_cnn.cpp  test_data_module.cpp  test_decision_tree.cpp  test_gradient_boosting.cpp  test_kmeans.cpp  test_knn.cpp  test_linear_regression.cpp  test_logistic_regression.cpp  test_lstm.cpp  test_metrics_logger.cpp  test_mlp.cpp  test_multiclass_models.cpp  test_naive_bayes.cpp  test_pca.cpp  test_random_forest.cpp  test_rnn.cpp  test_self_attention.cpp  test_svm.cpp  test_transformer.cpp
tests/data/: Iris.csv  mixed.csv
tools/: plot_results.py
(+26 files in other folders)
